# gxt2

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build_cmake.bat  build_win.bat  convertfiles.bat  labels.txt
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-single-platform.yml  cmake-windows.yml
cmake/: glfw.cmake  imgui.cmake  json.cmake  pfd.cmake
scripts/: .gitignore  convertfiles.bat  generate_appimage.sh  generate_master_json.py  gxt2edit.desktop
src/: CMakeLists.txt
src/data/: stringhash.h  util.cpp  util.h
src/grc/: glfw_vulkan.cpp  glfw_vulkan.h  graphics.cpp  graphics.h  image.cpp  image.h
src/grc/fonts/: NotoSans-Regular.cpp  Nunito-Regular.cpp  Roboto-Regular.cpp  fa-solid-900.cpp
src/grc/images/: addfile.cpp
src/gxt/: convert.cpp  convert.h  gxt2.cpp  gxt2.h  merge.cpp  merge.h
src/main/: gxt2conv.cpp  gxt2conv.h  gxt2edit.cpp  gxt2edit.h  gxt2merge.cpp  gxt2merge.h  main.cpp  main.h  main_include.h  memory.cpp
src/resources/: Info.plist  gxt2conv.rc  gxt2edit.rc  gxt2merge.rc  resource.h  resource.rc
src/resources/icons/: editor.icns
src/system/: app.cpp  app.h
text/american_rel/: global.gxt2
text/chinese_rel/: global.gxt2
text/chinesesimp_rel/: global.gxt2
text/french_rel/: global.gxt2
text/german_rel/: global.gxt2
text/italian_rel/: global.gxt2
text/mexican_rel/: global.gxt2
text/polish_rel/: global.gxt2
text/portuguese_rel/: global.gxt2
text/spanish_rel/: global.gxt2
